--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
   </head>
 
   <body>
-<!-- navigation bar start -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-blue">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Index page</a>
+        <a class="navbar-brand" href="/">Blogger</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,11 +39,16 @@
 
               <% end %>
 
-              <li class="nav-item ">
+              <li class="nav-item dropdown ">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              LOGIN
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <% if !user_signed_in? %>
-               <%= link_to "Admin Log in", user_session_path %> |
-               <%= link_to "New User", new_user_registration_path %>
+               <li><%= link_to "Admin Log in", user_session_path %></li>
+               <li><%= link_to "New User", new_user_registration_path %></li>
                <% end %>
+               </ul>
              </li>
             </li>
           </ul>
