--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h3>All Posts</h3>
+<h3>Posts</h3>
 <% @posts.each do |post| %>
   <h4><%= link_to post.title, post %> </h4>
   <%= post.created_at %>
