--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,10 +14,10 @@
   </p>
   <% if user_signed_in? %>
     <%= link_to 'Edit', edit_post_path(@post) %>
-    <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" } %>
+    <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: "Are you sure?" } %>
     <% end %>
   <p>
-    <h5><%= @post.comments.count %> Comments</h5>
+    <h1><%= @post.comments.count %> Comments</h1>
     <%= render @post.comments %>
 
     <strong>Add comments:</strong>
